<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"

    android:padding="@dimen/md_keylines">

    <android.support.v7.widget.CardView
        android:id="@+id/view2"
        android:layout_width="@dimen/avator_size"
        android:layout_height="@dimen/avator_size"
        android:innerRadius="0dp"
        android:shape="rectangle"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="5dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/list_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <ProgressBar
                android:id="@+id/Progbar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@style/CircularProgress" />
        </FrameLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:id="@+id/list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_toRightOf="@+id/view2"
            android:singleLine="true"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/item_title" />


        <TextView
            android:id="@+id/list_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_title"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_toRightOf="@+id/list_avatar"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/list_body"
            tools:text="@string/item_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_text"
                android:layout_marginLeft="@dimen/md_keylines"
                android:text="Action"
                android:textColor="?attr/colorPrimary" />

            <android.support.v7.widget.AppCompatButton

                android:id="@+id/btnOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOrder"
                android:textAllCaps="false"
                android:textColor="@color/icons"
                android:theme="@style/MyButton" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>